--- a/weapp/apps/customerized_apps/group/templates/webapp/m_group.html
+++ b/weapp/apps/customerized_apps/group/templates/webapp/m_group.html
@@ -508,9 +508,8 @@
         }else if(process=="0.0%"){
             process="0%";
         }
-        $('.xa-i-percentbox').text(current_number+'人');
+        $('.wui-i-cur_number').text(current_number+'人');
         $('.wa-i-total_number').text(total_number+'人');
-        $(".xa-i-percentbox").css("left",process);
         $(".xa-i-bar_process").width(process);
         percentBox_process_tmp = process;
 //        percentBoxTimer();
@@ -528,7 +527,10 @@
                 var li_content = '';
                 for(var i in helpers_info){
                     var p = helpers_info[i];
-                    li_content += "<span class='wui-i-friend'><span class='wui-i-avatarbox'><span class='wui-i-avatar'><img src='"+ p.user_icon+"'></span></span></span>";
+                    li_content += "<li class='wui-i-member'><img src='"+ p.user_icon+"'></li>";
+                }
+                for(var i=0; i < (parseInt(group_type)-helpers_info.length);i++){
+                    li_content += "<li class='wui-i-member'><img src='/termite_static/img/component/group/user_icon.png'></li>";
                 }
                 $('.wa-grouped-members').append($(li_content));
             }
