--- a/weapp/termite/static/termite_js/app/component/appkit/groupdescription/groupdescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/groupdescription/groupdescription.html
@@ -114,16 +114,7 @@
                         <div class="wui-i-displayName">团员</div>
                         <div class="wui-i-membersBox">
                             <ul class="wui-i-members_ul wa-grouped-members">
-                                <li class="wui-i-member"><img src=""></li>
-                                <li class="wui-i-member"><img src=""></li>
-                                <li class="wui-i-member"><img src=""></li>
-                                <li class="wui-i-member"><img src=""></li>
-                                <li class="wui-i-member"><img src=""></li>
-                                <li class="wui-i-member"><img src=""></li>
-                                <li class="wui-i-member"><img src=""></li>
-                                <li class="wui-i-member"><img src=""></li>
-                                <li class="wui-i-member"><img src=""></li>
-                                <li class="wui-i-member"><img src=""></li>
+                                <!--<li class="wui-i-member"><img src="/termite_static/img/component/group/user_icon.png"></li>-->
                             </ul>
                         </div>
                         <div class="wui-i-membersClear"></div>
