--- a/weapp/mall/templates/mall/editor/promotion/card_exchange.html
+++ b/weapp/mall/templates/mall/editor/promotion/card_exchange.html
@@ -197,6 +197,7 @@
 					                <span class="ml5 mr5">-</span>
 					                <input type="text" class="xui-i-num xa-endnum" name="endnum">	
 					                <span class="xa-exchangeSpan"></span>
+					                <span class="ml30 xa-exchangeStock">库存：</span>
 					                <a href="###" class="xui-i-del" title="删除">&times;</a>              
 			                    </div>
 			                </div>
@@ -237,6 +238,7 @@
 		<span class="ml5 mr5">-</span>
 		<input type="text" class="xui-i-num xa-endnum" name="endnum">	
 		<span class="xa-exchangeSpan"></span>   
+		<span class="ml30 xa-exchangeStock">库存：</span>
 		<a href="###" class="xui-i-del" title="删除">&times;</a>            
 	</div>
 </div>
@@ -270,6 +272,30 @@ $(document).ready(function() {
 			    }
 			})           
     })
+
+    $(document).on("blur",".xa-endnum",function(){
+    	var _this = $(this);
+    	var snumData = $(this).siblings(".xa-snum").val();
+	    var endnumData = $(this).val();
+		var stockData = {
+	        snum:snumData,
+	        endnum:endnumData
+		}
+		W.getApi().call({
+			    method: 'get',
+			    app: 'mall2',
+			    api: 'card_exchange',
+			    args: stockData,
+			    scope: this,
+			    success: function(data) {
+                	console.log('success');
+                	_this.siblings(".xa-exchangeStock").html("库存：123")
+			    },
+			    error: function(resp) {
+			    	console.log('error');   
+			    }
+			})
+    });
     //修改数据
 	$(".xa-btnSubmit").click(function(){
         var flag = checkNull()
@@ -280,7 +306,6 @@ $(document).ready(function() {
 		if(!$("input").attr("readonly")){
 			$("input").attr("readonly",true).hide();
             $(".xui-i-del").hide();
-            $(".xa-exchangeStock").show();
             var exchange_input = $(".xa-exchangeSpan").prev();
             for(var j=0;j<exchange_input.length;j++){
             	$(".xa-exchangeSpan")[j].innerHTML = exchange_input[j].value;
@@ -323,6 +348,10 @@ $(document).ready(function() {
 			    scope: this,
 			    success: function(data) {
 			        W.showHint('success', '保存成功');
+			        for(var i = 0;i < data.prize.length;i ++){
+                        var stock = $(".xa-exchangeStock");
+			        	stock[i].innerHTML = "库存："+ data.prize[i].count;	
+			        }
 			      },
 			    error: function(resp) {
 			        W.showHint('error', '操作失败');
@@ -330,7 +359,6 @@ $(document).ready(function() {
 			})           
 		}else{
             $("input").attr("readonly",false).show();
-            $(".xa-exchangeStock").hide();
 			$(this).html("保存"); 
 			$(".xa-add").show();
 			$(".xui-i-del").css("display","inline-block").eq(0).hide();
@@ -339,6 +367,8 @@ $(document).ready(function() {
 		}     
 	});
 });
+
+
 
 function checkNull(){
     var num=0;
