--- a/weapp/apps/customerized_apps/group/templates/webapp/m_group_list.html
+++ b/weapp/apps/customerized_apps/group/templates/webapp/m_group_list.html
@@ -17,8 +17,7 @@
         background: #fff;
         text-align: left;
         border-radius: 8px;
-        /*margin-bottom: 10px;*/
-        /*padding-bottom: 10px;*/
+        margin-bottom: 10px;
     }
     .wui-swiper-slide .xui-listInner .xui-i-content{
 
@@ -94,7 +93,7 @@
         top: 20px;
         left: 10px;
     }
-    .xui-all_groups_can_join-slide .xui-listInner .wui-i-imgBox img{
+    .xui-all_groups_can_join-slide .xui-listInner .wui-i-imgBox img,.xui-all_groups_can_join-list .xui-listInner .xui-i-title img{
         width: 60px;
         height: 60px;
         border-radius: 4px;
