--- a/weapp/apps/customerized_apps/group/templates/webapp/m_group.html
+++ b/weapp/apps/customerized_apps/group/templates/webapp/m_group.html
@@ -144,6 +144,7 @@
     var group_type = '';
     var group_relation_id = {% if group_relation_id %}'{{group_relation_id}}'{% else %}''{% endif %};
     var product_id = {% if product_id %}'{{product_id}}'{% else %}''{% endif %};
+    var settings_domain = '{{settings_domain}}';
 	$(function(){
         //隐藏参与活动按钮
         $('.xa-submitButtonContainer').hide();
@@ -334,7 +335,7 @@
                 },
                 success: function(data) {
                     var relation_belong_to = data.relation_belong_to;
-                    var data_href = "http://h5.weapp.com/mall/purchasing/?woid="+W.webappOwnerId+"&product_ids="+product_id+"&product_counts=1&product_model_names=standard&group_id="+relation_belong_to+"&activity_id="+W.appRecordId;
+                    var data_href = "http://"+settings_domain+"/mall/purchasing/?woid="+W.webappOwnerId+"&product_ids="+product_id+"&product_counts=1&product_model_names=standard&group_id="+relation_belong_to+"&activity_id="+W.appRecordId;
                     window.open(data_href, '_tab');
                 },
                 error: function(data) {
@@ -365,7 +366,7 @@
                 fid: page_owner_member_id
             },
             success: function(data) {
-                var data_href = "http://h5.weapp.com/mall/purchasing/?woid="+W.webappOwnerId+"&product_ids="+product_id+"&product_counts=1&product_model_names=standard&group_id="+group_relation_id+"&activity_id="+W.appRecordId;
+                var data_href = "http://"+settings_domain+"/mall/purchasing/?woid="+W.webappOwnerId+"&product_ids="+product_id+"&product_counts=1&product_model_names=standard&group_id="+group_relation_id+"&activity_id="+W.appRecordId;
                 window.open(data_href, '_tab');
             },
             error: function(data) {
